@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-17T01:06:40Z",
-  "count_outdated" : 44,
-  "uniques_outdated" : 33,
+  "timestamp" : "2023-07-17T16:14:17Z",
+  "count_outdated" : 45,
+  "uniques_outdated" : 34,
   "count" : 52,
   "uniques" : 39,
   "clones" : [
-    {
-      "timestamp": "2023-07-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-10T00:00:00Z",
       "count": 1,
